Refined responsivity, fixed some bugs on modals. closeForm() buttons are now at the top right corner whilst on mobile.

--- a/public/stylesheets/style_home.css
+++ b/public/stylesheets/style_home.css
@@ -448,16 +448,20 @@ footer {
       justify-content: space-around;
   }
 
-  #main_function_measure {
+  .main_function_measure {
         width:70%;
   }
 
-  #main_function_other {
+  .main_function_other {
     width:70%;
   }
 
   .userimg {
       height: 25vh;
       width: 25vh;
+  }
+
+  #bp_btn_text {
+    font-size: 12pt;
   }
 }
